--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
+bcrypt==4.1.2
 certifi==2025.11.12
 click==8.3.1
 colorama==0.4.6
@@ -20,6 +21,7 @@ markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
 motor==3.6.1
+passlib==1.7.4
 pydantic==2.12.5
 pydantic-extra-types==2.10.6
 pydantic-settings==2.12.0
