[WIP][UPD] Basic auth - part 2

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ MONGO_USER=admin
 MONGO_PASSWORD=secret
 MONGO_HOST=mongo
 MONGO_PORT=27017
+
+JWT_SECRET=local-development-secret-key
+JWT_ALGORITHM=HS256
+JWT_EXPIRE_HOURS=60
