--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ pydantic-extra-types==2.10.6
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
 Pygments==2.19.2
+PyJWT==2.10.1
 pymongo==4.9.2
 python-dotenv==1.2.1
 python-multipart==0.0.21
